# inference-engine-sqs-ecs

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  lint-requirements.txt  old.gitlab-ci.yml  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: github-actions-build-python-docs.yml  github-actions-build-terraform-lint.yml  github-actions-python.yml  python-docs.yml  terraform.yml
dev/: s3_client.py
docs/: LICENSE.md  Makefile  README.md  conf.py  index.rst  installation.rst
e2e_test/: conftest.py  test.py
example/: Dockerfile  _share.py  app.py  docker.env  local.env  put_load.py  requirements.txt  run.sh  send_message.py
scripts/: make_requirements.sh
src/inference_engine/: __init__.py  _sqs_base.py  dynamo_db_client.py  exceptions.py  types.py
src/inference_engine/consumer/: __init__.py  _ecs_scalein_protection_manager.py  _heartbeat.py  api_wrapper.py  consumer.py
src/inference_engine/producer/: __init__.py  producer.py
terraform/endpoints/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
terraform/infra/: .terraform.lock.hcl  README.md  example.env  iam.tf  main.tf  outputs.tf  prod.tfvars  ssm.tf  staging.tfvars  variables.tf
terraform/infra/modules/ecs-sqs-autoscaling/: README.md  main.tf  variables.tf
terraform/infra/modules/ecs-sqs-autoscaling/files/: cw_event_target_args.json.tpl
terraform/infra/modules/ecs-sqs-autoscaling/modules/lambda-function/: README.md  compute_queue_backlog.py  main.tf  outputs.tf  variables.tf
terraform/infra/modules/ecs-sqs-autoscaling/modules/service-autoscaling/: main.tf  variables.tf
terraform/infra/modules/inference_pipeline/: README.md  alerting.tf  autoscaling.tf  ddb.tf  ecs.tf  iam.tf  main.tf  outputs.tf  sqs.tf  variables.tf
tests/: conftest.py  test_consumer.py  test_consumer_api_wrapper.py  test_ddb.py  test_integration.py  test_producer.py  utils.py
